k8s/overlays/kdevel/web-initial-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpcexplorer-web
spec:
  replicas: 0
