k8s/overlays/kdevel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dpcexplorer-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4g
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx-public
  tls:
    - hosts:
        - dpcexplorer.areasciencepark.it
      secretName: tls-cert
  rules:
    - host: dpcexplorer.areasciencepark.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dpcexplorer-web
                port:
                  number: 8000
